--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-python-telegram-bot==20.0
-PyPDF2==3.0.1
-python-dotenv==1.0.0
+python-telegram-bot==22.2
+requests
+beautifulsoup4
+uvicorn
+cachetools
+googletrans==4.0.0rc1
